# Advanced-Onboarding-Solution

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION.md  README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
.github/workflows/: ci.yml
docs/: ai-integration-policy.md  crm-integration.md  dashboards.md  erpnext-integration.md  erpnext-migration-map.md  error-codes.md  first-piece-module.md  maintenance-module.md  merge-discovery.md  merge-plan.md  module-map.md  platform-blueprint.md  proshop-integration.md  quoting-engine.md  railway-deploy.md  shift-handoff-module.md  shipnotify.md  sop-knowledge-base.md  training-module.md  troubleshooting.md
docs/adr/: 0001-integration-bridge-pattern.md
erpnext-integration/: .env.example  README.md  docker-compose.yml
erpnext-integration/apps/advanced_pmc/: README.md  pyproject.toml
erpnext-integration/apps/advanced_pmc/advanced_pmc/: api.py  hooks.py
prisma/: schema.prisma  seed-demo.ts  seed.ts
scripts/: generate-initial-migration.cjs
src/: instrumentation.ts  middleware.ts
src/app/: globals.css  layout.tsx
src/components/: app-shell.tsx  command-palette.tsx  dashboard-render.tsx  dashboard-view.tsx  data-table.tsx  empty-state.tsx  erp-create-form.tsx  form-field.tsx  intake-form-section.tsx  kpi-card.tsx  login-form.tsx  modal.tsx  module-workbench.tsx  page-head.tsx  print-button.tsx  print-document.tsx  relationship-panel.tsx  toolbar.tsx  topbar-search.tsx
src/lib/: action-center.ts  (+29 more)
tests/: run-tests.ts
(+247 files in other folders)
