[project]
name = "advanced_pmc"
version = "0.1.0"
description = "Advanced PMC customizations on top of ERPNext (custom doctypes, fixtures, read-only integration API)."
authors = [{ name = "Advanced PMC", email = "it@advcosinc.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
